[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/icons/empty_slot_frame-512.png" type="Texture2D" id=1]
[ext_resource path="res://ui/slots/slots.gd" type="Script" id=2]
[ext_resource path="res://ui/icons/skills/darkness-512.png" type="Texture2D" id=3]
[ext_resource path="res://ui/icons/skills/attack-512.png" type="Texture2D" id=4]
[ext_resource path="res://ui/icons/skills/defense-512.png" type="Texture2D" id=5]
[ext_resource path="res://ui/icons/skills/self_dark-512.png" type="Texture2D" id=6]
[ext_resource path="res://ui/icons/symbols/letter_y-512.png" type="Texture2D" id=7]
[ext_resource path="res://ui/icons/skills/cooldown-512.png" type="Texture2D" id=8]

[node name="slots" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot0" type="TextureRect" parent="."]
offset_right = 761.0
offset_bottom = 2160.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot" type="TextureButton" parent="slot0"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cooldown" type="TextureProgressBar" parent="slot0/slot"]
anchor_right = 1.0
anchor_bottom = 1.0
max_value = 1.0
step = 0.01
texture_progress = ExtResource( 8 )
fill_mode = 3
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot1" type="TextureRect" parent="."]
offset_left = 769.0
offset_right = 1531.0
offset_bottom = 2160.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="slot" type="TextureButton" parent="slot1"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cooldown" type="TextureProgressBar" parent="slot1/slot"]
anchor_right = 1.0
anchor_bottom = 1.0
max_value = 1.0
step = 0.01
texture_progress = ExtResource( 8 )
fill_mode = 3
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot2" type="TextureRect" parent="."]
offset_left = 1539.0
offset_right = 2300.0
offset_bottom = 2160.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="slot" type="TextureButton" parent="slot2"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cooldown" type="TextureProgressBar" parent="slot2/slot"]
anchor_right = 1.0
anchor_bottom = 1.0
max_value = 1.0
step = 0.01
texture_progress = ExtResource( 8 )
fill_mode = 3
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot3" type="TextureRect" parent="."]
offset_left = 2308.0
offset_right = 3070.0
offset_bottom = 2160.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="slot" type="TextureButton" parent="slot3"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cooldown" type="TextureProgressBar" parent="slot3/slot"]
anchor_right = 1.0
anchor_bottom = 1.0
max_value = 1.0
step = 0.01
texture_progress = ExtResource( 8 )
fill_mode = 3
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot4" type="TextureRect" parent="."]
offset_left = 3078.0
offset_right = 3840.0
offset_bottom = 2160.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="slot" type="TextureButton" parent="slot4"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cooldown" type="TextureProgressBar" parent="slot4/slot"]
anchor_right = 1.0
anchor_bottom = 1.0
max_value = 1.0
step = 0.01
texture_progress = ExtResource( 8 )
fill_mode = 3
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}
